--- a/contacto.html
+++ b/contacto.html
@@ -50,7 +50,7 @@
             <div>
                 <h3> Autor de la pagina</h3>
                 <p>_________________</p>
-                <p> Engelberth Licero|||30.683.529.</p>
+                <p> José Machado|||31.476.417.</p>
                 <p>Carrera: PNF en Informatica</p>
                 <p>Seccion:11 |||Trayecto: 2-2</p>
                 <p> </p>
